update ui and logic

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -213,6 +213,14 @@
     "noQuestions": "No questions available.",
     "description": "Description",
     "mode": "Mode",
+    "studyMode": "Study Modes",
+    "selectStudyModes": "Select study modes to practice with",
+    "currentMode": "Current",
+    "flashcards": "Flashcards",
+    "learn": "Learn",
+    "write": "Write",
+    "test": "Test",
+    "match": "Match",
     "questionCount": "Question count",
     "cardsAvailable": "Available: {count} cards",
     "availableCards": "Available: {count} cards",
@@ -238,7 +246,40 @@
     "unknown": "Unknown",
     "cardProgress": "Card {current} of {total}",
     "knownCards": "Known cards",
-    "noCardsToStudy": "No cards to study"
+    "noCardsToStudy": "No cards to study",
+    "typeAnswer": "Type your answer...",
+    "showAnswer": "Show Answer",
+    "finalScore": "Final Score",
+    "totalAttempts": "Total attempts",
+    "studyAgain": "Study Again",
+    "writeCompleted": "Writing Practice Completed!",
+    "writeAgain": "Practice Again",
+    "writeAnswer": "Write your answer here...",
+    "writeInstructions": "Write the answer and press Ctrl+Enter to check, or Esc to skip",
+    "testCompleted": "Test Completed!",
+    "takeAgain": "Take Again",
+    "multipleChoice": "Multiple Choice",
+    "trueFalse": "True/False",
+    "fillBlank": "Fill in the Blank",
+    "multipleChoiceInstructions": "Select the correct answer using number keys (1-4)",
+    "trueFalseInstructions": "Press T for True, F for False",
+    "fillBlankInstructions": "Type the answer and press Enter",
+    "pressEnter": "Press Enter to submit",
+    "matchCompleted": "All Pairs Matched!",
+    "matchedPairs": "Matched pairs",
+    "playAgain": "Play Again",
+    "matchInstructions": "Click on cards to find matching pairs. Find the back for each front.",
+    "selectedItems": "Selected items",
+    "attempts": "Attempts",
+    "accuracy": "Accuracy",
+    "allPairsMatched": "All pairs matched successfully!",
+    "backToStudy": "Back to Study",
+    "answers": "Answers",
+    "yourScore": "Your score",
+    "total": "Total",
+    "incorrect": "Incorrect",
+    "quizCompleted": "Quiz Completed!",
+    "finalResults": "Final Results"
   },
   "quiz": {
     "title": "Quiz",
