--- a/frontend/src/locales/vi.json
+++ b/frontend/src/locales/vi.json
@@ -213,6 +213,14 @@
     "noQuestions": "Không có câu hỏi.",
     "description": "Mô tả",
     "mode": "Chế độ",
+    "studyMode": "Chế độ học tập",
+    "selectStudyModes": "Chọn chế độ học để luyện tập",
+    "currentMode": "Hiện tại",
+    "flashcards": "Thẻ ghi nhớ",
+    "learn": "Học thông minh",
+    "write": "Viết",
+    "test": "Kiểm tra",
+    "match": "Ghép đôi",
     "questionCount": "Số câu",
     "cardsAvailable": "Có {count} thẻ",
     "availableCards": "Có {count} thẻ",
@@ -238,7 +246,40 @@
     "unknown": "Chưa biết",
     "cardProgress": "Thẻ {current} của {total}",
     "knownCards": "Thẻ đã biết",
-    "noCardsToStudy": "Không có thẻ để học"
+    "noCardsToStudy": "Không có thẻ để học",
+    "typeAnswer": "Gõ đáp án của bạn...",
+    "showAnswer": "Hiện đáp án",
+    "finalScore": "Điểm cuối cùng",
+    "totalAttempts": "Tổng số lần thử",
+    "studyAgain": "Học lại",
+    "writeCompleted": "Hoàn thành bài tập viết!",
+    "writeAgain": "Luyện tập lại",
+    "writeAnswer": "Viết đáp án của bạn ở đây...",
+    "writeInstructions": "Viết đáp án và nhấn Ctrl+Enter để kiểm tra, hoặc Esc để bỏ qua",
+    "testCompleted": "Hoàn thành bài kiểm tra!",
+    "takeAgain": "Làm lại",
+    "multipleChoice": "Trắc nghiệm",
+    "trueFalse": "Đúng/Sai",
+    "fillBlank": "Điền khuyết",
+    "multipleChoiceInstructions": "Chọn đáp án đúng bằng phím số (1-4)",
+    "trueFalseInstructions": "Nhấn T cho Đúng, F cho Sai",
+    "fillBlankInstructions": "Gõ đáp án và nhấn Enter",
+    "pressEnter": "Nhấn Enter để nộp",
+    "matchCompleted": "Ghép hết các cặp!",
+    "matchedPairs": "Các cặp đã ghép",
+    "playAgain": "Chơi lại",
+    "matchInstructions": "Nhấn vào thẻ để tìm cặp phù hợp. Tìm mặt sau cho mỗi mặt trước.",
+    "selectedItems": "Các mục đã chọn",
+    "attempts": "Số lần thử",
+    "accuracy": "Độ chính xác",
+    "allPairsMatched": "Ghép hết các cặp thành công!",
+    "backToStudy": "Quay lại học",
+    "answers": "Đáp án",
+    "yourScore": "Điểm của bạn",
+    "total": "Tổng",
+    "incorrect": "Sai",
+    "quizCompleted": "Hoàn thành bài kiểm tra!",
+    "finalResults": "Kết quả cuối cùng"
   },
   "quiz": {
     "title": "Bài kiểm tra",
