feat: Refactor StudyPage to QuizPage with question type selection and study mode enhancements
- Renamed StudyPageMerged to QuizPage and adjusted functionality for quiz and study modes.
- Introduced question type selection (write and test) with localStorage persistence.
- Updated UI components to reflect changes in question types and modes.
- Added bulk card creation functionality in cardsSlice for improved card management.
- Removed unused memoization utility and created a shared memoComponent utility.
- Updated Vietnamese localization for new features and terminology.

--- a/frontend/src/locales/vi.json
+++ b/frontend/src/locales/vi.json
@@ -215,6 +215,9 @@
     "mode": "Chế độ",
     "studyMode": "Chế độ học tập",
     "selectStudyModes": "Chọn chế độ học để luyện tập",
+    "questionType": "Loại câu hỏi",
+    "selectQuestionType": "Chọn loại câu hỏi để luyện tập",
+    "mixedMode": "Trộn lẫn",
     "currentMode": "Hiện tại",
     "flashcards": "Thẻ ghi nhớ",
     "learn": "Học thông minh",
